; ModuleID = '/home/carl/AnghaBench/freebsd/usr.bin/gcore/extr_elfcore.c_elf_note_ptlwpinfo.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.bin/gcore/extr_elfcore.c_elf_note_ptlwpinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ptrace_lwpinfo = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"out of memory\00", align 1
@PT_LWPINFO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64*)* @elf_note_ptlwpinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @elf_note_ptlwpinfo(i8* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca %struct.ptrace_lwpinfo, align 4
  %8 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64* %1, i64** %4, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = bitcast i8* %9 to i32*
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %5, align 4
  %12 = call i8* @calloc(i32 1, i32 8)
  store i8* %12, i8** %8, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = icmp eq i8* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = call i32 @errx(i32 1, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  br label %17

17:                                               ; preds = %15, %2
  %18 = load i8*, i8** %8, align 8
  %19 = bitcast i8* %18 to i32*
  store i32 4, i32* %19, align 4
  %20 = load i8*, i8** %8, align 8
  %21 = bitcast i8* %20 to i32*
  %22 = getelementptr inbounds i32, i32* %21, i64 1
  %23 = bitcast i32* %22 to i8*
  %24 = bitcast i8* %23 to i32*
  store i32* %24, i32** %6, align 8
  %25 = load i32, i32* @PT_LWPINFO, align 4
  %26 = load i32, i32* %5, align 4
  %27 = bitcast %struct.ptrace_lwpinfo* %7 to i8*
  %28 = call i32 @ptrace(i32 %25, i32 %26, i8* %27, i32 4)
  %29 = load i32*, i32** %6, align 8
  %30 = call i32 @elf_convert_lwpinfo(i32* %29, %struct.ptrace_lwpinfo* %7)
  %31 = load i64*, i64** %4, align 8
  store i64 8, i64* %31, align 8
  %32 = load i8*, i8** %8, align 8
  ret i8* %32
}

declare dso_local i8* @calloc(i32, i32) #1

declare dso_local i32 @errx(i32, i8*) #1

declare dso_local i32 @ptrace(i32, i32, i8*, i32) #1

declare dso_local i32 @elf_convert_lwpinfo(i32*, %struct.ptrace_lwpinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
